package br.projeto.petshop.dto;

public record MarcaDTO(
    String nome
) {
    
}
