@startuml

    class Pessoa{
        - nome: String
        - cpf: String
    }

    class Usuario{
        - username: String
        - email: String
        - senha: String
    }

    class Cliente{
        - cpf: String
    }

    class Veterinario{
        - crvm: String
    }

    class Admin{
        
    }

    enum Perfil{
        - USER: int
        - AMIN: int
        - VET: int
    }

    class CompraRecorrente{
        - quantidade: int
        - dataCompra: Date
    }

    class Consulta{
        - data: Date
        - motivo: String
    }

    class Telefone{
        - codigoArea: String
        - numero: String
    }

    class Racao{
        - sabor: String
    }

    class Marca{
        - nome: String
    }

    class Pet{
        - nome: String
        - anoNascimento: int
    }

    class TipoAnimal{
        - nome: String
    }

    enum Peso{
        - 500G: int
        - 1KG: int
        - 2KG: int
        - 5KG: int
        - 10KG: int
    }

    enum Idade{
        - FILHOTE: int
        - ADULTO: int
    }

    enum Sexo{
        - MASCULINO: int
        - FEMININO: int
    }

    enum IntervaloTempo{
        - 1SEMANA: int
        - 2SEMANA: int
        - 3SEMANA: int
        - 1MES: int
        - 2MES: int
        - 3MES: int
        - 4MES: int
        - 5MES: int
        - 6MES: int
    }

    class Endereco{
        - endereco: String
        - complemento: String
        - estado: Estado
        - cidade: Cidade
        - codigoPostal: String
        - ePrincipal: boolean
    }


    class Pedido {
        - produtos: List<Produto>
        - enderecoEntrega: EnderecoDeEntrega
        - metodoPagamento: MetodoDePagamento
    }

    class Pagamento{
        - valor: Double
    }

    class CartaoCredito{
        - numeroCartao: String
        - dataValidade: LocalDate
        - codigoSeguranca: String
        - bandeira: String
    }

    class BoletoBancario{
        - banco: String
        - numeroBoleto: String
        - dataVencimento: LocalDate
    }
    
    class Pix{
        - chave: String
    }
    
    Cliente "1" --> "1" Pessoa
    Veterinario "1" --> "1" Pessoa
    Admin "1" --> "1" Pessoa

    Pessoa "1" --> "1" Usuario
    
    Racao "*" --> "1" TipoAnimal
    Racao "*" --> "1" Peso
    Racao "*" --> "1" Idade
    Racao "*" --> "1" Marca

    Cliente "1" --> "1" Telefone
    Cliente "1" --> "*" Endereco
    Cliente "1" --> "1" Sexo

    Pet "1" --> "1" Animal
    Pet "1" --> "1" Sexo
    Cliente "1" --> "*" Pet

    Consulta "1" --> "1" Veterinario
    Consulta "1" --> "1" Pet
    Consulta "1" --> Cliente

    CompraRecorrente "1" -left-> "1" IntervaloTempo
    CompraRecorrente "1" --> "*" Pedido
    CompraRecorrente "*" --> "1" Cliente

    Pedido "1" --> "*" Racao
    Pedido "1" --> "1" Endereco
    Pedido "1" --> "1" Pagamento

    Pagamento <|-- CartaoCredito
    Pagamento <|-- BoletoBancario
    Pagamento <|-- Pix


@enduml